--- a/Src/index.html
+++ b/Src/index.html
@@ -158,6 +158,72 @@
 
         <!-- Area de trabajo -->
         <div class="card p-2 w-100" id="squareWork">
+            <template><!-- Pantalla de selección de fichas -->
+                <!-- Encabezado de pagina principal -->
+                <h1 class="card-title" style="color: #00304D;"><strong>Te encuentras visualizando tu listado de <span
+                            style="color: #39A900;">fichas</span>:</strong>
+                </h1>
+
+
+                <!-- Barra de navegacion -->
+                <form>
+                    <!-- Subencabezado -->
+                    <p class="card-title" style="color: #00304D;" id="subHeading"><strong>Selecciona la ficha que deseas
+                            visualizar:</strong></p>
+                    <div class="linea-horizontal"></div>
+                    <div class="search-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-search" viewBox="0 0 16 16">
+                            <path
+                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                        </svg>
+                        <input class="form-control me-2" type="search" placeholder="Buscar ficha" aria-label="Search"
+                            id="searchBar">
+                    </div>
+                </form>
+
+                <!-- Tarjetas de fichas -->
+
+                <div class="card" style="width: 12rem;" id="courseCard">
+                    <img src="../Resources/Img/FolderIcon.png" class="card-img" alt="..." id="folderIcon">
+                    <div class="card-body">
+                        <h5 class="card-title"><strong>Ficha 2823217</strong></h5>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#optionModal" id="moreOptionBtn">
+                            <strong>Ver opciones</strong>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Modal de opciones -->
+                <div class="modal fade" id="optionModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="card-title" style="color: #00304D;"><strong>Por favor, selecciona una <span
+                                            style="color: #39A900;">opción</span>:</strong>
+                                </h1>
+                            </div>
+                            <div class="modal-body">
+                                <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
+                                    <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Registrar
+                                            asistencia</strong></button>
+                                    <button class="btn btn-primary" type="button"
+                                        id="btnCheckNotifications"><strong>Historial de asistencia</strong></button>
+                                    <button class="btn btn-primary" type="button"
+                                        id="btnCheckUserManual"><strong>¿Necesitas ayuda?</strong></button>
+                                </div>
+                            </div>
+                            <div class="modal-footer justify-content-center">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                                    id="btnCloseModal"><strong>Cerrar</strong></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </template>
+
             <!-- Encabezado de pagina principal -->
             <h1 class="card-title" style="color: #00304D;"><strong>Te encuentras visualizando tu listado de <span
                         style="color: #39A900;">fichas</span>:</strong>
@@ -181,34 +247,77 @@
                 </div>
             </form>
 
-            <!-- Tarjetas de fichas -->
-
-            <div class="card" style="width: 12rem;" id="courseCard">
-                <img src="../Resources/Img/FolderIcon.png" class="card-img" alt="..." id="folderIcon">
+            <!-- Tarjetas de notificaciones -->
+            <div class="card" style="width: 15rem;" id="courseCard">
+                <img src="../Resources/Img/NotificationIcon.png" class="card-img" alt="..." id="folderIcon">
                 <div class="card-body">
-                    <h5 class="card-title"><strong>Ficha 2823217</strong></h5>
-                    <a href="#" class="btn btn-primary" id="moreOptionBtn"><strong>Ver opciones</strong></a>
+                    <h5 class="card-title"><strong>Estudiante en riesgo</strong></h5>
+                    <p class="card-text"><small class="text-body-secondary">Martes 25 de febrero, 01:48 pm</small></p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#notificationModal" id="moreOptionBtn">
+                        <strong>Ver notificación</strong>
+                    </button>
                 </div>
             </div>
 
-            <!-- Modal  de falta de datos ingresados -->
-            <div class="modal fade" id="moreOptionModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <!-- Modal de ver notificación -->
+            <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-body text-center">
-                            <img src="../Resources/Img/errorIcon.png" alt="" class="mb-3">
-                            <h1><strong style="color: #00304D;">ERROR</strong></h1>
-                            <h1 id="modalMessageError"><strong style="color: #39A900;">Por favor, rellena todos
-                                    los campos.</strong></h1>
+                        <div class="modal-header">
+                            <h1 class="card-title" style="color: #00304D;"><strong>Estudiante en <span
+                                        style="color: #39A900;">riesgo</span>:</strong></h1>
+                        </div>
+                        <div class="modal-body">
+                            <strong></strong>
+
+                            <p>This is some placeholder content to show the scrolling behavior for modals. Instead of
+                                repeating the text in the modal, we use an inline style to set a minimum height, thereby
+                                extending the length of the overall modal and demonstrating the overflow scrolling. When
+                                content becomes longer than the height of the viewport, scrolling will move the modal as
+                                needed.</p>
                         </div>
                         <div class="modal-footer justify-content-center">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-                                id="btnCloseModal"><strong>Cerrar</strong></button>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#sendMessageModal" id="btnreplyMessage">
+                                <strong>Responder notificación</strong>
+                            </button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="btnCloseModal">
+                                <strong>Cerrar</strong>
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- Modal de responder notificación -->
+            <div class="modal fade" id="sendMessageModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="card-title" style="color: #00304D;"><strong>Por favor, envia tu <span
+                                        style="color: #39A900;">respuesta</span></strong></h1>
+                        </div>
+                        <div class="modal-body">
+                            <div class="mb-3">
+                                <textarea class="form-control" id="message-text"
+                                    placeholder="Escribe tu respuesta aquí..."></textarea>
+                            </div>
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="button" class="btn btn-primary" id="btnSendMessage"><strong>Enviar
+                                    respuesta</strong></button>
+                            <button type="button" class="btn btn-secondary"
+                                data-bs-dismiss="modal" id="btnCloseModal"><strong>Cerrar</strong></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            </template>
+
 
             <!-- Pie de pagina -->
             <h6><strong style="color: #c7c7c7;" id="footer">2024 - Servicio Nacional de Aprendizaje SENA</strong>
