--- a/Src/index.html
+++ b/Src/index.html
@@ -98,11 +98,11 @@
 
                 <!-- Botones de navegacion -->
                 <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
-                    <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Vizualizar mis
+                    <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Vizualizar
                             fichas</strong></button>
-                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver mis
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver
                             notificaciones</strong></button>
-                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan de
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan
                             seguimiento</strong></button>
                     <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas
                             ayuda?</strong></button>
@@ -146,7 +146,7 @@
                             fichas</strong></button>
                     <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver
                             notificaciones</strong></button>
-                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan de
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan
                             seguimiento</strong></button>
                     <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas
                             ayuda?</strong></button>
@@ -154,24 +154,24 @@
             </div>
         </div>
         <!-- Espacio de trabajo de trabajo -->
-        <div class="card d-flex justify-content-start" id="spaceWork">
+        <div class="card d-flex justify-content-center" id="spaceWork">
 
-            <template><!-- Pantalla de selección de fichas -->
-                <div class="container">
-                    <!-- Encabezado de página principal -->
-                    <h1 class="card-title" style="color: #00304D;">
-                        <strong>Te encuentras visualizando tu listado de <span
-                                style="color: #39A900;">fichas</span>:</strong>
-                    </h1>
+            <!-- Pantalla de selección de fichas -->
+            <div class="container d-flex flex-column align-items-center" id="heading">
+                <header class="text-center mb-3">
+                    <div class="container text-center my-4"> <!-- Añadido un margen para el espacio -->
+                        <h1 class="card-title p-2" style="color: #00304D;">
+                            <strong>Te encuentras visualizando tu listado de <span style="color: #39A900;">fichas</span>:</strong>
+                        </h1>
+                    </div>
 
-                    <!-- Barra de navegación -->
-                    <form>
-                        <!-- Subencabezado -->
-                        <p class="card-title" style="color: #00304D;" id="subHeading">
-                            <strong>Selecciona la ficha que deseas visualizar:</strong>
-                        </p>
-                        <div class="linea-horizontal"></div>
-                        <div class="search-container d-flex align-items-center mb-3">
+                    <!-- Subencabezado -->
+                    <p class="card-title p-2 text-start" style="color: #00304D;" id="subHeading">
+                        <strong>Selecciona la ficha que deseas visualizar:</strong>
+                    </p>
+                    <div class="linea-horizontal mb-3"></div>
+                    <form class="w-100">
+                        <div class="search-container d-flex align-items-center mb-3 justify-content-center">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-search" viewBox="0 0 16 16">
                                 <path
@@ -181,10 +181,12 @@
                                 aria-label="Search" id="searchBar">
                         </div>
                     </form>
+                </header>
 
+                <main class="w-100 text-center">
                     <!-- Tarjetas de fichas -->
-                    <div class="card mb-4" style="width: 12rem;" id="courseCard">
-                        <img src="../Resources/Img/FolderIcon.png" class="card-img" alt="..." id="folderIcon">
+                    <div class="card mb-4" style="width: 12rem;" id="contentCard">
+                        <img src="../Resources/Img/FolderIcon.png" class="card-img" alt="..." id="imgcon">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Ficha 2823217</strong></h5>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -206,11 +208,10 @@
                                     </h1>
                                 </div>
                                 <div class="modal-body">
-                                    <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
-                                        <button class="btn btn-primary" type="button"
-                                            id="btnCheckCourse"><strong>Registrar
-                                                asistencia</strong></button>
-                                        <button class="btn btn-primary" type="button"
+                                    <div class="d-flex flex-column align-items-stretch" id="btnNavegation">
+                                        <button class="btn btn-primary mb-2" type="button"
+                                            id="btnCheckCourse"><strong>Registrar asistencia</strong></button>
+                                        <button class="btn btn-primary mb-2" type="button"
                                             id="btnCheckNotifications"><strong>Historial de asistencia</strong></button>
                                         <button class="btn btn-primary" type="button"
                                             id="btnCheckUserManual"><strong>¿Necesitas ayuda?</strong></button>
@@ -223,9 +224,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </template>
-            
+                </main>
+
+                <footer class="mt-4 text-center">
+                    <h6><strong id="footer">2024 - Servicio Nacional de Aprendizaje SENA®</strong></h6>
+                </footer>
+
+            </div>
+
             <template><!-- Pantalla de vizualización de notificaciones -->
                 <div class="container">
                     <!-- Encabezado de página principal -->
@@ -247,8 +253,8 @@
                                 <path
                                     d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
                             </svg>
-                            <input class="form-control me-2" type="search" placeholder="Buscar ficha" aria-label="Search"
-                                id="searchBar">
+                            <input class="form-control me-2" type="search" placeholder="Buscar ficha"
+                                aria-label="Search" id="searchBar">
                         </div>
                     </form>
 
@@ -257,7 +263,8 @@
                         <img src="../Resources/Img/NotificationIcon.png" class="card-img" alt="..." id="folderIcon">
                         <div class="card-body">
                             <h5 class="card-title"><strong>Estudiante en riesgo</strong></h5>
-                            <p class="card-text"><small class="text-body-secondary">Martes 25 de febrero, 01:48 pm</small>
+                            <p class="card-text"><small class="text-body-secondary">Martes 25 de febrero, 01:48
+                                    pm</small>
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#notificationModal" id="moreOptionBtn">
@@ -278,11 +285,13 @@
                                 </div>
                                 <div class="modal-body">
                                     <strong style="color: #00304D;">Nombre de usuario (Bienestar al aprendiz)</strong>
-                                    <p>This is some placeholder content to show the scrolling behavior for modals. Instead
+                                    <p>This is some placeholder content to show the scrolling behavior for modals.
+                                        Instead
                                         of
                                         repeating the text in the modal, we use an inline style to set a minimum height,
                                         thereby
-                                        extending the length of the overall modal and demonstrating the overflow scrolling.
+                                        extending the length of the overall modal and demonstrating the overflow
+                                        scrolling.
                                         When
                                         content becomes longer than the height of the viewport, scrolling will move the
                                         modal as
@@ -330,8 +339,8 @@
                     </div>
                 </div>
             </template>
-
         </div>
+    </div>
     </div>
 
     <script src="app.js"></script>
